cluster/rolo/manifests/ingress-argo.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo.projectkube.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          serversTransport: default-insecure-transport@kubernetescrd
