cluster/rolo/manifests/ingress-capacitor.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: capacitor
  namespace: flux-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`capacitor.projectkube.com`)
      kind: Rule
      services:
        - name: capacitor
          port: 9000
