cluster/rolo/manifests/ingress-hubble.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hubble.projectkubes.com`)
      kind: Rule
      services:
        - name: hubble-ui
          port: 80
