cluster/rolo/manifests/ingress-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: traefik
  name: traefik-dashboard
spec:
  routes:
  - match: Host(`traefik.projectkube.com`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
